--- a/PosAgain/src/View/PosViewA.form
+++ b/PosAgain/src/View/PosViewA.form
@@ -500,6 +500,9 @@
                       <Properties>
                         <Property name="text" type="java.lang.String" value="Serch"/>
                       </Properties>
+                      <Events>
+                        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="btnCustomerIDMouseClicked"/>
+                      </Events>
                     </Component>
                   </SubComponents>
                 </Container>
@@ -544,7 +547,7 @@
                                   <EmptySpace max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="0" attributes="0">
                                       <Component id="txtSupplierID" alignment="0" min="-2" pref="171" max="-2" attributes="0"/>
-                                      <Component id="txtSuppliercell" alignment="0" min="-2" pref="171" max="-2" attributes="0"/>
+                                      <Component id="txtSupplierCell" alignment="0" min="-2" pref="171" max="-2" attributes="0"/>
                                   </Group>
                                   <EmptySpace max="32767" attributes="0"/>
                                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
@@ -563,7 +566,7 @@
                                   </Group>
                                   <EmptySpace type="separate" max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="0" attributes="0">
-                                      <Component id="txtSupplierContactNumber" min="-2" pref="196" max="-2" attributes="0"/>
+                                      <Component id="txtSupplierContactPerson" min="-2" pref="196" max="-2" attributes="0"/>
                                       <Component id="txtSupplierAddress" min="-2" pref="202" max="-2" attributes="0"/>
                                   </Group>
                                   <EmptySpace max="32767" attributes="0"/>
@@ -598,11 +601,11 @@
                           <EmptySpace min="-2" pref="32" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
                               <Component id="jLabel12" alignment="3" min="-2" pref="22" max="-2" attributes="0"/>
-                              <Component id="txtSuppliercell" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="txtSupplierCell" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="jLabel13" alignment="3" min="-2" pref="22" max="-2" attributes="0"/>
                               <Component id="txtSupplierEmail" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="txtSupplier" alignment="3" min="-2" pref="22" max="-2" attributes="0"/>
-                              <Component id="txtSupplierContactNumber" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="txtSupplierContactPerson" alignment="3" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace min="-2" pref="43" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
@@ -682,7 +685,7 @@
                     <Property name="text" type="java.lang.String" value="Cell"/>
                   </Properties>
                 </Component>
-                <Component class="javax.swing.JTextField" name="txtSuppliercell">
+                <Component class="javax.swing.JTextField" name="txtSupplierCell">
                 </Component>
                 <Component class="javax.swing.JLabel" name="jLabel13">
                   <Properties>
@@ -696,7 +699,7 @@
                     <Property name="text" type="java.lang.String" value="Contact Person"/>
                   </Properties>
                 </Component>
-                <Component class="javax.swing.JTextField" name="txtSupplierContactNumber">
+                <Component class="javax.swing.JTextField" name="txtSupplierContactPerson">
                 </Component>
                 <Container class="javax.swing.JScrollPane" name="jScrollPane2">
                   <AuxValues>
@@ -716,6 +719,9 @@
                           </Table>
                         </Property>
                       </Properties>
+                      <Events>
+                        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="tableSupplierMouseClicked"/>
+                      </Events>
                     </Component>
                   </SubComponents>
                 </Container>
@@ -723,21 +729,33 @@
                   <Properties>
                     <Property name="text" type="java.lang.String" value="Save"/>
                   </Properties>
+                  <Events>
+                    <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="btnSupplierSaveMouseClicked"/>
+                  </Events>
                 </Component>
                 <Component class="javax.swing.JButton" name="btnSupplierDelete">
                   <Properties>
                     <Property name="text" type="java.lang.String" value="Delete"/>
                   </Properties>
+                  <Events>
+                    <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="btnSupplierDeleteMouseClicked"/>
+                  </Events>
                 </Component>
                 <Component class="javax.swing.JButton" name="btnSupplierReset">
                   <Properties>
                     <Property name="text" type="java.lang.String" value="Reset"/>
                   </Properties>
+                  <Events>
+                    <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="btnSupplierResetMouseClicked"/>
+                  </Events>
                 </Component>
                 <Component class="javax.swing.JButton" name="btnSupplierEdit">
                   <Properties>
                     <Property name="text" type="java.lang.String" value="Edit"/>
                   </Properties>
+                  <Events>
+                    <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="btnSupplierEditMouseClicked"/>
+                  </Events>
                 </Component>
               </SubComponents>
             </Container>
